<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
                name="viewModel"
                type="ru.geekbrains.android.level3.valeryvpetrov.presentation.presenter.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.ui.MainActivity"
            tools:shownIn="@layout/activity_main">

        <ProgressBar
                android:id="@+id/loadProgress"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/margin"
                android:visibility="@{viewModel.dataLoading.booleanValue() ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toTopOf="@+id/usernameEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/userRepoItemsRecycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/margin"
                android:scrollbars="vertical"
                android:visibility="@{viewModel.user.repoItems != null ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toTopOf="@+id/usernameEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/item_repo" />

        <EditText
                android:id="@+id/usernameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:hint="@string/username_edit_hint"
                app:layout_constraintBottom_toTopOf="@+id/loadNetworkButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

        <Button
                android:id="@+id/loadNetworkButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:onClick="@{() -> viewModel.loadUserWithReposFromNetwork(usernameEdit.getText().toString())}"
                android:text="@string/load_network_button_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/usernameEdit" />

        <Button
                android:id="@+id/loadDbButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:onClick="@{() -> viewModel.loadUserWithReposFromDb(usernameEdit.getText().toString())}"
                android:text="@string/load_db_button_text"
                app:layout_constraintBottom_toTopOf="@+id/saveDbButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loadNetworkButton" />

        <Button
                android:id="@+id/saveDbButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:onClick="@{() -> viewModel.saveUserWithReposToDb(viewModel.user)}"
                android:text="@string/save_db_button_text"
                app:layout_constraintBottom_toTopOf="@+id/deleteDbButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loadDbButton" />

        <Button
                android:id="@+id/deleteDbButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginBottom="@dimen/margin"
                android:onClick="@{() -> viewModel.deleteUserWithReposFromDb(viewModel.user)}"
                android:text="@string/delete_db_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saveDbButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>